# fnardl

./: README.md  pyproject.toml
docs/: api-reference.html  bootstrap-nardl.html  examples.html  fourier-nardl.html  index.html  installation.html  nardl.html  styles.css
examples/: nardl_fourier_example.ipynb  nardl_fourier_tutorial.ipynb
nardl_fourier/: __init__.py
nardl_fourier/bounds_test/: __init__.py  bootstrap_test.py  critical_values.py  pss_bounds.py
nardl_fourier/core/: __init__.py  fbnardl.py  fnardl.py  nardl.py
nardl_fourier/data/: __init__.py
nardl_fourier/diagnostics/: __init__.py  stability.py  tests.py
nardl_fourier/multipliers/: __init__.py  dynamic_multipliers.py
nardl_fourier/output/: __init__.py  plots.py  tables.py
nardl_fourier/simulation/: __init__.py  critical_values_sim.py
nardl_fourier/utils/: __init__.py  helpers.py
